[package]
name = "uplink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = ">= 1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.chrono]
version = ">= 0.4.19"

[dependencies.openxr]
version = ">= 0.16.0"

[dependencies.rustyline]
version = ">= 9.1.0"

[dependencies.ash]
version = ">= 0.37.0"

[dependencies.ctrlc]
version = ">= 3.2.2"